Fixed and removed errors that occurred in v1.2.7.